# DeepSolution

./: .gitmodules  CMakeLists.txt  CMakePresets.json  DeepSolution.cpp  README.md  TODO.md  vcpkg.json
DeepSolution/: Application.cpp  Application.h  Camera.cpp  Camera.h  ImGuiAdapter.cpp  ImGuiAdapter.h  Light.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  State.h  TextureLoader.h
DeepSolution/Camera/: ArcballCamera.cpp  Camera.h
DeepSolution/Common/: Handle.h
DeepSolution/Core/: Buffer.cpp  Buffer.h  CommandPool.cpp  CommandPool.h  Common.cpp  Common.h  DescriptorWrite.cpp  DescriptorWrite.h  Device.cpp  Device.h  Image.cpp  Image.h  Queue.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  Transition.cpp  Transition.h
DeepSolution/Render/: InfiniteGrid.cpp  InfiniteGrid.h  Skybox.cpp  Skybox.h
DeepSolution/Scene/: Scene.cpp  Scene.h
DeepSolution/Utility/: FlattenCubemap.cpp  FlattenCubemap.h  IrradianceCubemap.cpp  IrradianceCubemap.h  PrefilterCubemap.cpp  PrefilterCubemap.h
Shaders/: BRDF.frag  Common.glsl  Compositing.vert  FlattenCubemap.vert  InfiniteGrid.frag  InfiniteGrid.vert  Irradiance.frag  Irradiance.vert  PBR.frag  PBR.vert  Prefilter.frag  Skybox.vert  TransparentPBR.frag  TransparentPBR.vert  Vertex.glsl
assets/: .gitignore
shaders/: BRDF.vert  Blit.frag  BloomComposite.frag  BloomDownsample.frag  BloomUpsample.frag  Common.glsl  Compositing.frag  PBR.frag
shadersoo/: FlattenCubemap.frag  Prefilter.frag  Skybox.frag  TransparentPBR.frag
src/: Application.cpp  Application.h  DeepSolution.cpp  Renderer.cpp  Renderer.h  Scene.cpp  State.h  Timer.cpp  Timer.h
src/Camera/: ArcballCamera.h  Camera.cpp  FreeCamera.cpp  FreeCamera.h
src/Common/: Bench.h
src/Core/: Buffer.cpp  Buffer.h  Common.h  Cube.h  DescriptorWrite.cpp  DescriptorWrite.h  Device.cpp  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  Shader.cpp  Swapchain.cpp  Swapchain.h  Transition.cpp  Transition.h
src/Render/: Bloom.cpp  Bloom.h  InfiniteGrid.cpp  Skybox.cpp
src/Utility/: FlattenCubemap.cpp  FlattenCubemap.h  IrradianceCubemap.cpp  PrefilterCubemap.cpp  PrefilterCubemap.h
test/: CMakeLists.txt  Handle.test.cpp
